# GenArrayIter

./: .gitignore  GenArrayIter.opam  README.md  dune-project
.github/workflows/: opam-dependency-submission.yml  push_doc_on_ghpages.yml  workflow.yml
doc/: odoc.css
lib/: dune  iter.ml  iter.mli
test/: dune  testiter.ml
