(lang dune 3.6)

(name GenArrayIter)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Alexandre Gouraud")

(maintainers "Alexandre Gouraud")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name GenArrayIter)
 (synopsis "An exention of Genarray to allow iterations in various ways")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "Genarray" "iter" "iteration")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
